--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -1,9 +1,6 @@
 {
   "item.alphacraft.ball": "Ball",
-<<<<<<< HEAD
+  "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "block.alphacraft.castle_wall_block": "Castle Wall",
   "itemGroup.alphaCraftTab": "AlphaCraft"
-=======
-  "item.alphacraft.enderite_ingot": "Enderite Ingot"
->>>>>>> 42638889e3d849f2dfe20851e2844ac7162f10ae
 }
