--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.alphacraft.ball": "Ball",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "block.alphacraft.castle_wall_block": "Castle Wall",
+  "block.alphacraft.enderite_block": "Block of Enderite",
   "itemGroup.alphaCraftTab": "AlphaCraft"
 }
