Enderite Tools added part 1
prepared lang file for enderite tools
added textures for tools
added alpha materials enum
added enderite material
added enerite sword

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -2,6 +2,11 @@
   "item.alphacraft.ball": "Ball",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "item.alphacraft.enderite_dust": "Enderite Dust",
+  "item.alphacraft.enderite_sword": "Enderite Sword",
+  "item.alphacraft.enderite_axe": "Enderite Axe",
+  "item.alphacraft.enderite_pickaxe": "Enderite Pickaxe",
+  "item.alphacraft.enderite_shovel": "Enderite Shovel",
+  "item.alphacraft.enderite_hoe": "Enderite Hoe",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.castle_wall_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
