recipes/smelting mass push
added crafting recipes for all current blocks and items
added 2 new items, castle brick and dark clay
added smelting recipe for dark clay to castle brick

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.alphacraft.ball": "Ball",
+  "item.alphacraft.castle_brick": "Castle Brick",
+  "item.alphacraft.dark_clay": "Dark Clay",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "item.alphacraft.enderite_dust": "Enderite Dust",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
