--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.alphacraft.ball": "Ball",
   "item.alphacraft.castle_brick": "Castle Brick",
   "item.alphacraft.dark_clay": "Dark Clay",
+  "item.alphacraft.poop": "Skat",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "item.alphacraft.enderite_dust": "Enderite Dust",
   "item.alphacraft.enderite_sword": "Enderite Sword",
