--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -5,5 +5,6 @@
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.castle_wall_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
+  "block.alphacraft.poop_block": "Block of Poop",
   "itemGroup.alphaCraftTab": "AlphaCraft"
 }
