--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -12,7 +12,7 @@
   "item.alphacraft.enderite_hoe": "Enderite Hoe",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.dark_clay_block": "Dark Clay",
-  "block.alphacraft.castle_wall_block": "Castle Wall",
+  "block.alphacraft.castle_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.poop_block": "Block of Skat",
   "itemGroup.alphaCraftTab": "AlphaCraft"
