--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+
   "item.alphacraft.ball": "Ball",
   "item.alphacraft.castle_brick": "Castle Brick",
   "item.alphacraft.dark_clay": "Dark Clay",
@@ -10,9 +11,14 @@
   "item.alphacraft.enderite_pickaxe": "Enderite Pickaxe",
   "item.alphacraft.enderite_shovel": "Enderite Shovel",
   "item.alphacraft.enderite_hoe": "Enderite Hoe",
+
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.castle_wall_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.poop_block": "Block of Skat",
-  "itemGroup.alphaCraftTab": "AlphaCraft"
+  
+  "biome.alphacraft.nasty_plains": "Nasty Plains",
+
+  "itemGroup.alphaCraftTab": "AlphaCraft",
+
 }
