--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -16,9 +16,9 @@
   "block.alphacraft.castle_wall_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.poop_block": "Block of Skat",
-  
+
   "biome.alphacraft.nasty_plains": "Nasty Plains",
 
-  "itemGroup.alphaCraftTab": "AlphaCraft",
+  "itemGroup.alphaCraftTab": "AlphaCraft"
 
 }
