updated nasty swamp biome
changed nasty plains to swamp and added features

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -16,7 +16,7 @@
   "item.alphacraft.enderite_leggings": "Enderite Leggings",
   "item.alphacraft.enderite_boots": "Enderite Boots",
 
-  "block.alphacraft.dark_grass_block": "Dark Grass",
+  "block.alphacraft.dark_grass_block": "Dark Grass Block",
   "block.alphacraft.dark_dirt_block": "Dark Dirt",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.dark_clay_block": "Dark Clay",
