added dark stone and dark cobble stone
also added recipes for each

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -20,6 +20,8 @@
   "block.alphacraft.dark_dirt_block": "Dark Dirt",
   "block.alphacraft.dark_stone": "Dark Stone",
   "block.alphacraft.nasty_stem": "Nasty Stem",
+  "block.alphacraft.nasty_planks": "Nasty Planks",
+  "block.alphacraft.dark_cobblestone": "Dark Cobblestone",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.dark_clay_block": "Dark Clay",
   "block.alphacraft.poop_block": "Block of Skat",
