--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -29,6 +29,7 @@
   "block.alphacraft.enderite_block": "Block of Enderite",
 
   "biome.alphacraft.nasty_swamp": "Nasty Swamp",
+  "biome.alphacraft.dark_forest": "Darker Forest",
 
   "itemGroup.alphaCraftTab": "AlphaCraft"
 
