--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -27,6 +27,7 @@
   "block.alphacraft.poop_block": "Block of Skat",
   "block.alphacraft.castle_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
+  "block.alphacraft.ultra_ore": "Ultra Ore",
 
   "biome.alphacraft.nasty_swamp": "Nasty Swamp",
   "biome.alphacraft.dark_forest": "Darker Forest",
