--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.alphacraft.ball": "Ball",
   "item.alphacraft.castle_brick": "Castle Brick",
   "item.alphacraft.dark_clay": "Dark Clay",
-  "item.alphacraft.poop": "Skat",
+  "item.alphacraft.poop": "Poop",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "item.alphacraft.enderite_dust": "Enderite Dust",
   "item.alphacraft.enderite_sword": "Enderite Sword",
@@ -24,7 +24,7 @@
   "block.alphacraft.dark_cobblestone": "Dark Cobblestone",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.dark_clay_block": "Dark Clay",
-  "block.alphacraft.poop_block": "Block of Skat",
+  "block.alphacraft.poop_block": "Block of Poop",
   "block.alphacraft.castle_block": "Castle Wall",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.ultra_ore": "Ultra Ore",
