--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -15,6 +15,7 @@
   "item.alphacraft.enderite_chestplate": "Enderite Chestplate",
   "item.alphacraft.enderite_leggings": "Enderite Leggings",
   "item.alphacraft.enderite_boots": "Enderite Boots",
+  "item.alphacraft.ultra_ingot": "Ultra Ingot",
 
   "block.alphacraft.dark_grass_block": "Dark Grass Block",
   "block.alphacraft.dark_dirt_block": "Dark Dirt",
