added dark bricks variants and leaves
added dark bricks stairs slab and fence
added nasty leaves and dark leaves
added dark log
added textures for all
saplings now have a texture but they are bugged, working on a fix

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -22,11 +22,20 @@
   "block.alphacraft.dark_stone": "Dark Stone",
   "block.alphacraft.nasty_stem": "Nasty Stem",
   "block.alphacraft.nasty_planks": "Nasty Planks",
+  "block.alphacraft.nasty_leaves": "Nasty Leaves",
+  "block.alphacraft.nasty_tree_sapling": "Nasty Stem Sapling",
+  "block.alphacraft.dark_log": "Dark Log",
+  "block.alphacraft.dark_planks": "Dark Planks",
+  "block.alphacraft.dark_leaves": "Dark Leaves",
+  "block.alphacraft.dark_tree_sapling": "Dark Tree Sapling",
   "block.alphacraft.dark_cobblestone": "Dark Cobblestone",
   "block.alphacraft.enderite_ore_block": "Enderite Ore",
   "block.alphacraft.dark_clay_block": "Dark Clay",
   "block.alphacraft.poop_block": "Block of Poop",
   "block.alphacraft.dark_bricks": "Dark Bricks",
+  "block.alphacraft.dark_bricks_fence": "Dark Bricks Fence",
+  "block.alphacraft.dark_bricks_stairs": "Dark Bricks Stairs",
+  "block.alphacraft.dark_bricks_slab": "Dark Bricks Slab",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.ultra_ore": "Ultra Ore",
 
