--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -38,10 +38,14 @@
   "block.alphacraft.dark_bricks_slab": "Dark Bricks Slab",
   "block.alphacraft.enderite_block": "Block of Enderite",
   "block.alphacraft.ultra_ore": "Ultra Ore",
+  "block.alphacraft.alpha_portal_block": "The Alpha",
 
   "biome.alphacraft.nasty_swamp": "Nasty Swamp",
   "biome.alphacraft.dark_forest": "Darker Forest",
 
-  "itemGroup.alphaCraftTab": "AlphaCraft"
+  "itemGroup.alphaCraftBlocksTab": "A: Building Blocks",
+  "itemGroup.alphaCraftDecorTab": "A: Decorations",
+  "itemGroup.alphaCraftToolsTab": "A: Tools",
+  "itemGroup.alphaCraftItemsTab": "A: Items"
 
 }
