added enderite trash and plates
also tried adding dark cobble stone to stone_crafting_materials so it can be used to make furnaces, but does not seem to work

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -6,6 +6,8 @@
   "item.alphacraft.poop": "Poop",
   "item.alphacraft.enderite_ingot": "Enderite Ingot",
   "item.alphacraft.enderite_dust": "Enderite Dust",
+  "item.alphacraft.enderite_trash": "Enderite Trash",
+  "item.alphacraft.enderite_plate": "Enderite Plate",
   "item.alphacraft.enderite_sword": "Enderite Sword",
   "item.alphacraft.enderite_axe": "Enderite Axe",
   "item.alphacraft.enderite_pickaxe": "Enderite Pickaxe",
