added dark grass grass

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -20,6 +20,7 @@
   "item.alphacraft.ultra_ingot": "Scapolite Ingot",
 
   "block.alphacraft.dark_grass_block": "Dark Grass Block",
+  "block.alphacraft.dark_grass": "Dark Grass",
   "block.alphacraft.dark_dirt_block": "Dark Dirt",
   "block.alphacraft.dark_stone": "Dark Stone",
   "block.alphacraft.nasty_stem": "Nasty Stem",
