added bright flowers

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -21,6 +21,7 @@
 
   "block.alphacraft.dark_grass_block": "Dark Grass Block",
   "block.alphacraft.dark_grass": "Dark Grass",
+  "block.alphacraft.bright_flower": "Bright Flower",
   "block.alphacraft.dark_dirt_block": "Dark Dirt",
   "block.alphacraft.dark_stone": "Dark Stone",
   "block.alphacraft.nasty_stem": "Nasty Stem",
