added carvers to alpha biomes (sorta)
the carver does not carve dark stone, but it will carve the vanilla carvable blocks. this means the caves only show up in the overworld in the current state

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -52,6 +52,7 @@
   "block.alphacraft.alpha_portal_block": "The Alpha",
   "block.alphacraft.smelter": "Smelter",
   "block.alphacraft.dark_chest": "Dark Chest",
+  "block.alphacraft.pink_diamond_ore": "Pink Diamond Ore",
 
   "container.smelter": "Two Item Smelter",
   "container.dark_chest": "Dark Chest",
