added Smooth Obsidian Spike feature and added Ash Dunes biome
made bright dunes a more rare variant of ash biome

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -57,6 +57,7 @@
   "block.alphacraft.bright_sandstone": "Bright Sandstone",
   "block.alphacraft.smooth_obsidian": "Smooth Obsidian",
   "block.alphacraft.anthracite_ore": "Anthracite Ore",
+  "block.alphacraft.ash": "Ash",
 
   "container.smelter": "Two Item Smelter",
   "container.dark_chest": "Dark Chest",
