added dark podzol
makes dark forests less boring

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -58,6 +58,7 @@
   "block.alphacraft.smooth_obsidian": "Smooth Obsidian",
   "block.alphacraft.anthracite_ore": "Anthracite Ore",
   "block.alphacraft.ash": "Ash",
+  "block.alphacraft.dark_podzol": "Dark Podzol",
 
   "container.smelter": "Two Item Smelter",
   "container.dark_chest": "Dark Chest",
