alpha portal block works
added alpha portal block works just like end portal, ball is temp tropy place holder

--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -59,6 +59,7 @@
   "block.alphacraft.anthracite_ore": "Anthracite Ore",
   "block.alphacraft.ash": "Ash",
   "block.alphacraft.dark_podzol": "Dark Podzol",
+  "block.alphacraft.alpha_portal_frame": "Portal Frame",
 
   "container.smelter": "Two Item Smelter",
   "container.dark_chest": "Dark Chest",
