--- a/src/main/resources/assets/alphacraft/lang/en_us.json
+++ b/src/main/resources/assets/alphacraft/lang/en_us.json
@@ -1,6 +1,6 @@
 {
 
-  "item.alphacraft.ball": "Ball",
+  "item.alphacraft.infected_ender_pearl": "Infected Ender Pearl",
   "item.alphacraft.dark_brick": "Dark Brick",
   "item.alphacraft.dark_clay": "Dark Clay",
   "item.alphacraft.poop": "Poop",
